--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
 
     <footer class="pt-3 mt-4 text-body-secondary border-top">
-      &copy; 2024
+      &copy; 20-24
     </footer>
   </div>
 </main>
